# PowerCore

./: CMakeLists.txt  ParseInstructions.cc  PowerCore.h  README.md  main.cc  powerpc.ppcdef  test-powerpc.cpp  testfun.c  testfun.sh
generator/: PowerGenerator.cc
include/: PowerCore.h
src/: CountInstructions.cc  PowerCore.cc  PowerCoreInlines.h  PowerCoreTemplate.cc  powerpc.ppcdef
test/: main.cc  test-powerpc.cpp  testfun.c  testfun.sh
